--- a/RemoteAdvisor/RemoteAdvisor.csproj
+++ b/RemoteAdvisor/RemoteAdvisor.csproj
@@ -220,6 +220,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <Content Include="webpack.config.js" />
+    <Content Include="ReadMe.md" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
