--- a/RemoteAdvisor/packages.config
+++ b/RemoteAdvisor/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
-  <package id="Azure.Communication.Administration" version="1.0.0-beta.3" targetFramework="net472" />
-  <package id="Azure.Communication.Common" version="1.0.0-beta.3" targetFramework="net472" />
-  <package id="Azure.Core" version="1.6.0" targetFramework="net472" />
+  <package id="Azure.Communication.Common" version="1.0.1" targetFramework="net472" />
+  <package id="Azure.Communication.Identity" version="1.0.1" targetFramework="net472" />
+  <package id="Azure.Core" version="1.14.0" targetFramework="net472" />
   <package id="bootstrap" version="4.4.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
@@ -22,12 +22,13 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="popper.js" version="1.16.0" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.6.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory.Data" version="1.0.2" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net472" />
   <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
