--- a/RemoteAdvisor/packages.config
+++ b/RemoteAdvisor/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="Azure.Communication.Common" version="1.2.1" targetFramework="net472" />
   <package id="Azure.Communication.Identity" version="1.2.0" targetFramework="net472" />
+  <package id="Azure.Communication.Sms" version="1.0.1" targetFramework="net472" />
   <package id="Azure.Core" version="1.27.0" targetFramework="net472" />
   <package id="bootstrap" version="4.4.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
